Test/typing/should_fail/methods_void_return.java
package tutu.titi.toto;

class A {

    private void myMethod(){
        return 1;
    }

}